feat: add sutra types with audio support
